[package]
name = "load_tester"
version = "0.1.0"
authors = ["Ray Kochenderfer <ray.kochenderfer@nextgenfilms.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.6.0"
serde = "1.0.114"
tokio = {version = "0.2.22", features = ["full"]}
hyper = "0.13.7"
